# code_engine

./: .gitignore
ide/vscode/: snippets.json
ide/vscode/plugins/functionAPIs/: Readme.md
src/: CMakeLists.txt
src-py/interface_parse/: parse.py
src-toolkit/MarcoToName/: CMakeLists.txt
src-toolkit/MarcoToName/MarcoToNameSln/: main.cpp
src/CodeEngine/: main.cpp
src/CodeEngine/c_engine/app/cpp/: CppGenerateIfdef.cpp
src/CodeEngine/c_engine/app/test/system/: TestFileSystem.cpp
src/CodeEngine/c_engine/impl/: codeengine.h
src/CodeEngine/c_engine/impl/engine/cpp/: CCppGeneral.cpp  CCppGeneral.h  CCppGeneralNotes.txt
src/CodeEngine/c_engine/impl/engine/general/: GeneralCode.cpp  GeneralCode.h
src/CodeEngine/c_engine/impl/engine/generator/: CCppClass.cpp  CCppClass.h
src/CodeEngine/c_engine/impl/engine/log/: log.h
src/CodeEngine/c_engine/impl/engine/string/: CStringUtil.cpp  CStringUtil.h
src/CodeEngine/c_engine/impl/engine/system/: FileSystemUtil.cpp  FileSystemUtil.h  GeneralUtil.cpp  GeneralUtil.h
src/CodeEngine/c_engine/impl/example/: CParseFunction.cpp  CParseFunction.h  CParseSentence.cpp  CParseSentence.h  CVisualStudioToolkit.cpp  CVisualStudioToolkit.h
src/CodeEngine/c_engine/impl/toolkit/: CStringToolkit.cpp  CStringToolkit.h
src/CodeEngine/c_engine/interface/app/: IApplication.h
src/CodeEngine/c_engine/interface/data/: cpp_structs.h  grammar_struct.h
src/CodeEngine/c_engine/interface/engine/: ICommandLineSuggestion.h
src/CodeEngine/c_engine/interface/engine/cpp/: ICppGeneral.h  ICppStructs.h
src/CodeEngine/c_engine/interface/engine/datastructure/: ITree.h
src/CodeEngine/c_engine/interface/engine/generator/: ICppClass.h
src/CodeEngine/c_engine/interface/engine/string/: IStringUtil.h
src/CodeEngine/c_engine/interface/engine/system/: IFileSystemUtil.h  IGeneralUtil.h
src/CodeEngine/c_engine/interface/toolkit/: Console.h  IStringToolkit.h
src/CodeEngine/c_engine/lab/prob/: CPrincipleTest.cpp  CPrincipleTest.h
